Update READMEs: add module/package descriptions and run instructions